# ems-mlops

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  deploy_routine.py  hospital_meta.csv  predictor.py  preporcess.py  pyproject.toml  requirements-routine.txt  simulation.md
.github/workflows/: cd.yml  ci.yml  test_test_model_api.yml
codes/: __init__.py  batch_info.py  gcs_utils.py  logger_config.py  model_loader.py  postprocess.py  predictor.py  preprocess.py  static_resource.py  static_resources.py
codes/schemas/: __init__.py  api_schema.py  input.py  utils.py
data/: constraints.json  features.json  hospital_meta.csv  input_api_schema.json  input_schema.yaml  output_api_schema.json  triage_dummy.json
data_factory/: factory.py  run.py  types.py
data_factory/core/: __init__.py  interfaces.py
data_factory/stratagies/: __init__.py  acceptance.py  timing.py  travel.py
data_factory/system/: default_engine.py  metric.py
deploy/: __init__.py  deploy_container.py  deploy_routine.py  local.py  local_model.py
schemas/: hospital.py  patient.py  utils.py
src/: app.py  predictor.py
src/backend/: __init__.py  gcs.py  local.py
src/codes/: __init__.py  postprocess.py  static_resources.py
src/core/: __init__.py  static_resources.py  storage_backend.py
src/pipelines/: __init__.py  postprocess.py  preprocess.py
src/process/: __init__.py  postprocess.py  preprocess.py
src/schemas/: __init__.py  api_schema.py  hospital.py  patient.py  utils.py
src/utils/: __init__.py  gcs_utils.py  logger_config.py
test/: test.py  test_api.py  test_cloud.py  test_model_load.py  test_routine.py  testconfig.py
test/data/: output_api_schema.json
tests/: conftest.py  test_api.py  test_cloud.py  test_unit.py
