[project]
name = "ems-wrapper"
version = "0.4.1"
description = "ML pipelines for EMS-Copilot: development and deployment"
readme = "README.md"
requires-python = ">=3.7,<3.10"
dependencies = [
    "tensorflow==2.8.0",
    "numpy<=1.21.6",
    "google-cloud-aiplatform[prediction]",
]

[tool.uvicorn.reload]
exclude = ["test/**"]

[dependency-groups]
dev = [
    "ruff>=0.14.1",
]
container = [
    "tensorflow-addons==0.16.1",
    "gunicorn>=23.0.0",
    "struct2tensor>=0.39.0",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]