[project]
name = "ems-wrapper"
version = "0.1.0"
description = "ML pipelines for EMS-Copilot: development and deployment"
readme = "README.md"
requires-python = ">=3.7,<3.10"
dependencies = [
    "tensorflow-cpu==2.8.0",
    "numpy<=1.21.6",
    "struct2tensor>=0.39.0",
    "google-cloud-aiplatform[prediction]",
    "fastapi",
    "uvicorn",
    "pyyaml>=6.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.1",
]
container = [
    "gunicorn>=23.0.0",
]

[tool.uvicorn.reload]
exclude = ["test/**"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]