[project]
name = "ems-wrapper"
version = "0.1.0"
description = "ML pipelines for EMS-Copilot: development and deployment"
readme = "README.md"
requires-python = ">=3.7,<3.10"
dependencies = [
    "tensorflow-cpu==2.8.0",
    "numpy<=1.21.6",
    "struct2tensor>=0.39.0",
    "filelock>=3.12.2",
    "google-cloud-aiplatform[prediction]>=1.15.1",
    "fastapi>=0.103.2",
    "uvicorn>=0.22.0",
]

[tool.uvicorn.reload]
exclude = ["test/**"]

[dependency-groups]
dev = [
    "pytest>=7.4.4",
    "ruff>=0.14.1",
]
container = [
    "gunicorn>=23.0.0",
]

[tool.ruff]
line-length = 79
target-version = "py39"
select = ["E", "F"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
pythonpath = "."